# NFT-certs-for-photos

./: AGENTS.md  CLAUDE.md  README.md  requirements_pl.md
app01_java_nft/: .gitignore  AGENTS.md  CLAUDE.md  requirements.md
app02_cpp_nft/: .gitignore  CLAUDE.md  (+1 more)
app02_cpp_nft/backend/: CMakeLists.txt
app02_cpp_nft/backend/src/: main.cpp
app02_cpp_nft/backend/src/api/: ArtistDashboardController.cpp  ArtistDashboardController.h  ArtworkController.cpp  ArtworkController.h  CertificateController.cpp  CertificateController.h  CertificateDtoMapper.cpp  CertificateDtoMapper.h  ExceptionMapping.cpp  ExceptionMapping.h  I18nController.cpp  I18nController.h  IdentityController.cpp  IdentityController.h  UploadController.cpp  UploadController.h  UploadStore.cpp  UploadStore.h
app02_cpp_nft/backend/src/blockchain/: AbiEncoder.cpp  AbiEncoder.h  ContractService.cpp  ContractService.h  EthSigner.cpp  EthSigner.h  Hex.h  JsonRpcClient.cpp  JsonRpcClient.h  Keccak256.cpp  Keccak256.h  MintResult.h  Rlp.cpp  Rlp.h
app02_cpp_nft/backend/src/certificate/: Artwork.h  ArtworkRepository.cpp  ArtworkRepository.h  ArtworkStatus.h  Certificate.h  CertificateRepository.cpp  CertificateRepository.h  CertificateService.cpp  CertificateService.h
app02_cpp_nft/backend/src/config/: Config.cpp  Config.h
app02_cpp_nft/backend/src/db/: Database.cpp  Database.h
app02_cpp_nft/backend/src/error/: ApiException.h  ErrorResponse.cpp  ErrorResponse.h  Exceptions.h
app02_cpp_nft/backend/src/hashing/: Sha256HashingService.cpp  Sha256HashingService.h
app02_cpp_nft/backend/src/i18n/: Messages.cpp  Messages.h
app02_cpp_nft/backend/src/identity/: ArtistIdentity.h  ArtistIdentityRepository.cpp  ArtistIdentityRepository.h  KycVerificationService.h  MockKycVerificationService.cpp  MockKycVerificationService.h
app02_cpp_nft/backend/src/net/: SharedEventLoop.cpp  SharedEventLoop.h
app02_cpp_nft/backend/src/pdf/: CertificatePdfService.cpp  CertificatePdfService.h
app02_cpp_nft/backend/src/storage/: IpfsStorageService.h  LocalStubIpfsStorageService.cpp  LocalStubIpfsStorageService.h  PinResult.h  PinataIpfsStorageService.cpp  PinataIpfsStorageService.h
app02_cpp_nft/backend/src/util/: Time.cpp  Time.h  Uuid.cpp  Uuid.h
app02_cpp_nft/backend/src/watermark/: MetadataWatermarkService.cpp  MetadataWatermarkService.h
app02_cpp_nft/backend/tests/: CMakeLists.txt  HttpTestServer.cpp  HttpTestServer.h  TinyJpeg.h  test_abi_encoder.cpp  test_api_http.cpp  test_certificate_service.cpp  test_config.cpp  test_contract_service.cpp  test_dto_mapper.cpp  test_eth_signer.cpp  test_hashing.cpp  test_hex.cpp  test_i18n_messages.cpp  test_json_rpc_client.cpp  test_keccak.cpp  test_kyc_service.cpp  test_local_stub_storage.cpp  test_main.cpp  test_pdf_service.cpp  test_pinata_storage.cpp  test_repositories.cpp  test_rlp.cpp  test_upload_store.cpp  test_util.cpp  test_watermark_service.cpp
(+281 files in other folders)
